--- a/public/app/index.html
+++ b/public/app/index.html
@@ -38,6 +38,6 @@
         <script src="./app/scripts/contentBuilder.js"></script>
         <script src="./app/scripts/content.js"></script>
         <script src="./app/scripts/main.js"></script>
-        <script src="./example-scripts/example-scripts.js"></script>
+        <script src="./examples/examples.js"></script>
     </body>
 </html>
