setting up section injection

--- a/public/app/sections/overview.html
+++ b/public/app/sections/overview.html
@@ -8,7 +8,12 @@
     </h2>
     
     <p>
-        OpenFin applies standard web behaviour when handling Anchour Links and respects any attributes applied to the Achour element.  /
-        To enable developers to build desktop application using web technology the OpenFin API provides the tools to 
+        OpenFin applies standard web behaviour when handling Anchour Links and respects any attributes applied to the Achour element.  
+        This example application explores the default behaviour and the options avaialble to control how links are handled, including:
     </p>
+    <ul>
+        <li>Default Achor Tag behaviour</li>
+        <li>Opening Urls with the default web browser (using System.openUrlWithBrowser() )</li>
+        <li>Opening Urls with the default web browser (using System.launchExternalProcess() )</li>
+    </ul>
 </html>
