More work to split sections

--- a/public/app/sections/linkDefaultBehavior.html
+++ b/public/app/sections/linkDefaultBehavior.html
@@ -1,5 +1,6 @@
 <html>
-    <title>this is the tile</title>
+    <title>Link Handling Default Behaviour</title>
+    <div id="id">linkDefaultBehaviour</div>
 
     <h2>
             Default Achor tag handling
@@ -10,7 +11,7 @@
     </h3>
 
     <p>
-        OpenFin follows standard web behaviour when handling Anchour tags.
+        OpenFin follows standard web behaviour when handling Anchor tags.
     </p>
 
     <h3>
@@ -22,7 +23,7 @@
         (A new window is required as the default beaviour of links in this window has been overridden, which is explored in a later section).
     </p>
 
-    <div class="menuButton" id="openAnchourLinkWindow" onClick="openAnchourLinkWindow()">
+    <div class="menuButton" id="openAnchorLinkWindow" onClick="openChildTemplate('linkExample', ['linkExample'])">
         <p>Open Link Examples</p>
     </div>
 
