--- a/public/app/sections/overview.html
+++ b/public/app/sections/overview.html
@@ -1,4 +1,6 @@
-<html>
+<html id="overview">
+    <title>Overview</title>
+    <div id="id" class="hidden">overview</div>
     <h1>
         OpenFin - Links 
     </h1>
